--- a/Shazalcohol/package.json
+++ b/Shazalcohol/package.json
@@ -11,15 +11,20 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "expo": "~49.0.12",
+    "expo-barcode-scanner": "~12.5.3",
+    "expo-permissions": "~14.2.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-syntax-jsx": "^7.22.5",
+    "tailwindcss": "^3.3.3"
   },
   "private": true
 }
