--- a/Shazalcohol/package.json
+++ b/Shazalcohol/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.12",
     "expo-barcode-scanner": "~12.5.3",
+    "expo-camera": "~13.4.4",
     "expo-permissions": "~14.2.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
