--- a/Shazalcohol/package.json
+++ b/Shazalcohol/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "crypto-js": "^4.2.0",
     "expo": "~49.0.12",
     "expo-barcode-scanner": "~12.5.3",
     "expo-camera": "~13.4.4",
@@ -22,6 +23,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-crypto": "^2.2.0",
+    "react-native-crypto-js": "^1.0.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-sha256": "^1.4.9",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
