--- a/Shazalcohol/package.json
+++ b/Shazalcohol/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "crypto-js": "^4.2.0",
@@ -26,6 +27,7 @@
     "react-native-crypto": "^2.2.0",
     "react-native-crypto-js": "^1.0.0",
     "react-native-elements": "^3.4.3",
+    "react-native-picker": "^4.3.7",
     "react-native-sha256": "^1.4.9",
     "react-native-web": "~0.19.6"
   },
