Added image handling

--- a/Shazalcohol/package.json
+++ b/Shazalcohol/package.json
@@ -17,6 +17,7 @@
     "expo": "~49.0.12",
     "expo-barcode-scanner": "~12.5.3",
     "expo-camera": "~13.4.4",
+    "expo-image-picker": "^14.5.0",
     "expo-permissions": "~14.2.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -27,6 +28,7 @@
     "react-native-crypto": "^2.2.0",
     "react-native-crypto-js": "^1.0.0",
     "react-native-elements": "^3.4.3",
+    "react-native-image-picker": "^7.0.3",
     "react-native-picker": "^4.3.7",
     "react-native-sha256": "^1.4.9",
     "react-native-vector-icons": "^10.0.2",
