--- a/Shazalcohol/app.json
+++ b/Shazalcohol/app.json
@@ -14,6 +14,12 @@
     "owner": "z84",
     "plugins": [
       [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ],
+      [
         "expo-barcode-scanner",
         {
           "cameraPermission": "Allow $(PRODUCT_NAME) to access camera."
